x.y.z
=====

Release date:

New features:

* Add setting for 'inverted controls'
  - Pan the view with a modifier key (Ctrl) and select a group of items without a modifier key being pressed

Bug fixes:

* Fix tab key not working properly with node and edge text inputs

* Unselect implicitly selected node after context menu has closed

* Don't autosave unmodified mind map on exit

Other:

* Change help texts to tool tips in edit settings

* Update Italian translations

* Update Dutch translations

3.7.0
=====

Release date:

Mon, 13 Feb 2023 19:21:18 -0000

New features:

* Add default settings for arrow size and edge width

* Add default settings for text size and font

* Add edit option to mirror the layout horizontally or vertically

* Animate edge deletion

* Animate node deletion

Bug fixes:

* Fix node left selected on canceled node/text color dialog

3.6.4
=====

Release date:

Mon, 19 Dec 2022 19:49:40 -0000

Bug fixes:

* Fix crash when trying to copy a group of connected nodes

Other:

* Update Italian translations

3.6.3
=====

Release date:

Sun, 11 Dec 2022 18:28:24 -0000

New features:

* Fix GitHub Issue #229: Add option to automatically open the last used file on application start
  - Autoload can be now enabled in edit settings

* Implement asynchronous file save for autosave
  - Fixes stuttering user experience on large files

Bug fixes:

* Fix Heimer Snap on Ubuntu 22.04
  - Didn't launch due to Wayland issues
  - Forced to X11 for now

Other:

* Initialize a new mind map to avoid an undefined state if the mind map fails to load

* Apply autosave only when settings dialog is accepted

* Increase edge with step to 0.25

* Update Dutch and Italian translations

3.6.2
=====

Release date:

Fri, 11 Nov 2022 16:22:10 -0000

New features:

* Add tooltips to node handles

* Set handle background color based on node color

* Light or dark text edit highlight based on node color

Bug fixes:

* Fix GitHub issue #224: Tests fail when compiled with UBSan
